--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 question: "Hak untuk hidup, tumbuh, dan berkembang dijamin dalam UUD NRI Tahun 1945 Pasal...",
                 options: {
                     "A": "Pasal 27 ayat (1)",
-                    "B": "Pasal 28A",
+                    "B": "Pasal 28B",
                     "C": "Pasal 29 ayat (2)",
                     "D": "Pasal 31 ayat (1)"
                 }
